added new endpoints, update database - zaopatrzenie table
